--- a/directors/dugan-gundelfinger/index.html
+++ b/directors/dugan-gundelfinger/index.html
@@ -58,7 +58,7 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Dugan Gundelfinger</h1>
-						<p>Dugan Gundelfinger is an award-winning writer/director, occasional actor & musician. Californian all the way down to the accent, Dugan is connected to the universe. His father was a rock and roll photographer, his mother a contemporary dancer and his grandfather an accomplished cartoonist. Creativity runs deep in his genes. At one point was attached to direct the official Vanilla Ice Biopic. Dugan currently resides in the Ojai Valley with his two daughters and many psychedelic cacti.</p>
+						<p>Dugan Gundelfinger is an award-winning writer/director, occasional actor & musician. Californian all the way down to the accent, Dugan is connected to the universe. His father was a rock and roll photographer, his mother a contemporary dancer and his grandfather an accomplished cartoonist. Creativity runs deep in his genes. At one point was attached to direct the official Vanilla Ice Biopic. Dugan currently resides in the Ojai Valley with his two daughters and many psychedelic cacti.
 						
 			<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
 				<h2 class="director-portfolio-info-awards-title">Awards</h2>
@@ -281,17 +281,17 @@
 
 					
 		<section class="news-block">
-			<h3>Rebrand Post</h3>
+			<h3>Our New Identity</h3>
 			<p>[03.01.2025]</p>
 			<br>
 			<p>
-				<p>We’re getting rid of the old Skin and Bones and starting fresh. It’s more than just a new look (but we love the new look) it’s a new way forward. Give the rebrand a spin on our site.</p>
+				<p>We’re getting rid of the old Skin &amp; Bones and starting fresh. It’s more than just a new look (but we love the new look), it’s a new way forward. Give the rebrand a spin on our site.</p>
 
 			</p>
 		</section>
 	
 		<section class="news-block">
-			<h3>David Reviews Post</h3>
+			<h3>David Reviews</h3>
 			<p>[02.21.2025]</p>
 			<br>
 			<p>
@@ -325,7 +325,7 @@
 			<p>[02.04.2025]</p>
 			<br>
 			<p>
-				<p>The sharp eyes at EyeCandy @eyecannndy have spotted Jeremi Durand’s @_jeremidurand new music video for Nina Chuba @ninachuba.. Surreal and simple, artful and wild we’re not surprised to see Jeremi’s work is turning heads. Check out the video here and the eye candy link <a href="https://www.instagram.com/p/DFqY7qYS_Kj/?img_index=1">here</a>.</p>
+				<p>The sharp eyes at EyeCandy @eyecannndy have spotted Jeremi Durand’s @_jeremidurand new music video for Nina Chuba @ninachuba. Surreal and simple, artful and wild we’re not surprised to see Jeremi’s work is turning heads. Check out the video here and the eye candy link <a href="https://www.instagram.com/p/DFqY7qYS_Kj/?img_index=1">here</a>.</p>
 
 			</p>
 		</section>
