--- a/directors/jackie-abraham/index.html
+++ b/directors/jackie-abraham/index.html
@@ -59,6 +59,7 @@
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Jackie Abraham</h1>
 						<p>Starting out as a writer in the creative department armed Jackie’s with an inside perspective on directing commercial work. A writer by discipline he immediately understands his projects in a different way than other directors with a combination of smart, strategic thinking and dumb, funny thinking. He knows how to balance work that works hard and great work that puts smiles on faces. You won’t find a genuine, more passionate director ready to do great things than Jackie Abraham.</p>
+
 						
 			<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
 				<h2 class="director-portfolio-info-awards-title">Awards</h2>
@@ -270,17 +271,17 @@
 
 					
 		<section class="news-block">
-			<h3>Rebrand Post</h3>
+			<h3>Our New Identity</h3>
 			<p>[03.01.2025]</p>
 			<br>
 			<p>
-				<p>We’re getting rid of the old Skin and Bones and starting fresh. It’s more than just a new look (but we love the new look) it’s a new way forward. Give the rebrand a spin on our site.</p>
+				<p>We’re getting rid of the old Skin &amp; Bones and starting fresh. It’s more than just a new look (but we love the new look), it’s a new way forward. Give the rebrand a spin on our site.</p>
 
 			</p>
 		</section>
 	
 		<section class="news-block">
-			<h3>David Reviews Post</h3>
+			<h3>David Reviews</h3>
 			<p>[02.21.2025]</p>
 			<br>
 			<p>
@@ -314,7 +315,7 @@
 			<p>[02.04.2025]</p>
 			<br>
 			<p>
-				<p>The sharp eyes at EyeCandy @eyecannndy have spotted Jeremi Durand’s @_jeremidurand new music video for Nina Chuba @ninachuba.. Surreal and simple, artful and wild we’re not surprised to see Jeremi’s work is turning heads. Check out the video here and the eye candy link <a href="https://www.instagram.com/p/DFqY7qYS_Kj/?img_index=1">here</a>.</p>
+				<p>The sharp eyes at EyeCandy @eyecannndy have spotted Jeremi Durand’s @_jeremidurand new music video for Nina Chuba @ninachuba. Surreal and simple, artful and wild we’re not surprised to see Jeremi’s work is turning heads. Check out the video here and the eye candy link <a href="https://www.instagram.com/p/DFqY7qYS_Kj/?img_index=1">here</a>.</p>
 
 			</p>
 		</section>
