--- a/directors/sebastian-hill-esbrand/index.html
+++ b/directors/sebastian-hill-esbrand/index.html
@@ -59,6 +59,7 @@
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Sebastian Hill-Esbrand</h1>
 						<p>Sebastian is a director of Caribbean and Australian heritage. His international upbringing taught Sebastian the power in diversity, as well as the importance of having intersectionality displayed on screen. His experience is threaded into the DNA of his work. Bringing outsiders and unexpected characters to the front of the frame and making them shine. His latest film ‘Family’ won the Gold Lion in the Young Director Award in Cannes.</p>
+
 						
 			<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
 				<h2 class="director-portfolio-info-awards-title">Awards</h2>
@@ -270,17 +271,17 @@
 
 					
 		<section class="news-block">
-			<h3>Rebrand Post</h3>
+			<h3>Our New Identity</h3>
 			<p>[03.01.2025]</p>
 			<br>
 			<p>
-				<p>We’re getting rid of the old Skin and Bones and starting fresh. It’s more than just a new look (but we love the new look) it’s a new way forward. Give the rebrand a spin on our site.</p>
+				<p>We’re getting rid of the old Skin &amp; Bones and starting fresh. It’s more than just a new look (but we love the new look), it’s a new way forward. Give the rebrand a spin on our site.</p>
 
 			</p>
 		</section>
 	
 		<section class="news-block">
-			<h3>David Reviews Post</h3>
+			<h3>David Reviews</h3>
 			<p>[02.21.2025]</p>
 			<br>
 			<p>
@@ -314,7 +315,7 @@
 			<p>[02.04.2025]</p>
 			<br>
 			<p>
-				<p>The sharp eyes at EyeCandy @eyecannndy have spotted Jeremi Durand’s @_jeremidurand new music video for Nina Chuba @ninachuba.. Surreal and simple, artful and wild we’re not surprised to see Jeremi’s work is turning heads. Check out the video here and the eye candy link <a href="https://www.instagram.com/p/DFqY7qYS_Kj/?img_index=1">here</a>.</p>
+				<p>The sharp eyes at EyeCandy @eyecannndy have spotted Jeremi Durand’s @_jeremidurand new music video for Nina Chuba @ninachuba. Surreal and simple, artful and wild we’re not surprised to see Jeremi’s work is turning heads. Check out the video here and the eye candy link <a href="https://www.instagram.com/p/DFqY7qYS_Kj/?img_index=1">here</a>.</p>
 
 			</p>
 		</section>
