updated lightbox behavior

--- a/directors/nolan-sarner/index.html
+++ b/directors/nolan-sarner/index.html
@@ -58,13 +58,13 @@
 				<main class="director-portfolio">
 					<section class="director-portfolio-info">
 						<h1 class="director-portfolio-info-title">Nolan Sarner</h1>
-						<p>Nolan can make just about any story a beautiful story. The lead character could be a little kid or a big name, but Nolan’s ability to get authentic performances is always consistent. Paired with beautiful cinematography and a naturally fluid pace, his work feels like real life even when it’s not. His experience directing real people of all ages has kept him nimble and creative on the fly. Nolan comes from directing real people in candid situations, so he can also think creatively on the fly.</p>
+						<p>Nolan can make just about any story a beautiful story. The lead character could be a little kid or a big name, but Nolan’s ability to get authentic performances is always consistent. Paired with beautiful cinematography and a naturally fluid pace, his work feels like real-life even when it’s not.</p>
 
 						
 			<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
 				<h2 class="director-portfolio-info-awards-title">Awards</h2>
 				<ul class="director-portfolio-info-awards-list">
-					<li>Canadian Screen Awards, Recognized for Excellence, 2018, for Nolan Sarner</li><li>ADCC, Shortlist, 2019, for Nolan Sarner</li><li>1.4, Shortlist, 2019, for Nolan Sarner</li><li>Berlin Commercial Awards, Shortlist, 2019, for Nolan Sarner</li><li>Vimeo, Staff Pick, 2019, for Nolan Sarner</li>
+					<li>Canadian Screen Award Winner, 2018</li><li>Canadian Screen Award Nominee, 2019</li><li>ADCC, Shortlist, 2024</li><li>1.4, Shortlist, 2021 & 2022</li><li>Berlin Commercial Awards, Shortlist, 2021 & 2022</li><li>Vimeo, Staff Pick</li>
 				</ul>
 			</div>
 		
@@ -106,7 +106,7 @@
 			</figure>
 		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/RBC_NEWCOMERS_75_DC_mov.mp4?mrss=true', 'RBC', 'Newcomers');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2023-09-05-at-21923-PM.jpg');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2025-03-04-at-22612-PM.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
@@ -189,7 +189,7 @@
 			<div class="director-portfolio-info-awards">
 				<h2 class="director-portfolio-info-awards-title">Awards</h2>
 				<ul class="director-portfolio-info-awards-list">
-				<li>Canadian Screen Awards, Recognized for Excellence, 2018, for Nolan Sarner</li><li>ADCC, Shortlist, 2019, for Nolan Sarner</li><li>1.4, Shortlist, 2019, for Nolan Sarner</li><li>Berlin Commercial Awards, Shortlist, 2019, for Nolan Sarner</li><li>Vimeo, Staff Pick, 2019, for Nolan Sarner</li>
+				<li>Canadian Screen Award Winner, 2018</li><li>Canadian Screen Award Nominee, 2019</li><li>ADCC, Shortlist, 2024</li><li>1.4, Shortlist, 2021 & 2022</li><li>Berlin Commercial Awards, Shortlist, 2021 & 2022</li><li>Vimeo, Staff Pick</li>
 				</ul>
 			</div>
 		
