--- a/directors/matt-rhodes/index.html
+++ b/directors/matt-rhodes/index.html
@@ -64,7 +64,7 @@
 			<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
 				<h2 class="director-portfolio-info-awards-title">Awards</h2>
 				<ul class="director-portfolio-info-awards-list">
-					<li>D&AD Awards, Best Performance, 2016</li><li>Kinsale Shark Awards, Best Performance, 2016</li><li>Kinsale Shark Awards, Winner of Over 40 Awards, 2016</li><li>Promax Awards, Winner of Over 40 Awards, 2016</li>
+					<li>D&AD Awards, Best Performance, 2022</li><li>Kinsale Shark Awards, Best Performance, 2022</li><li>Kinsale Shark Awards, Winner of Over 40 Awards</li><li>Promax Awards, Winner of Over 40 Awards</li>
 				</ul>
 			</div>
 		
@@ -167,7 +167,7 @@
 			<div class="director-portfolio-info-awards">
 				<h2 class="director-portfolio-info-awards-title">Awards</h2>
 				<ul class="director-portfolio-info-awards-list">
-				<li>D&AD Awards, Best Performance, 2016</li><li>Kinsale Shark Awards, Best Performance, 2016</li><li>Kinsale Shark Awards, Winner of Over 40 Awards, 2016</li><li>Promax Awards, Winner of Over 40 Awards, 2016</li>
+				<li>D&AD Awards, Best Performance, 2022</li><li>Kinsale Shark Awards, Best Performance, 2022</li><li>Kinsale Shark Awards, Winner of Over 40 Awards</li><li>Promax Awards, Winner of Over 40 Awards</li>
 				</ul>
 			</div>
 		
